[package]
name = "stm32-data-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stm32-data-serde = { git = "https://github.com/embassy-rs/stm32-data", version = "0.1.0" }
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
